--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button class="btn-primary">Download CV</button>
           <button class="btn-primary">Contact</button>
         </div>
-        <img src="./images/hardy.png" alt="" />
+        <img class="profile-pic" src="./images/hardy.png" alt="" />
       </div>
     </header>
   </body>
