--- a/index.html
+++ b/index.html
@@ -37,12 +37,165 @@
       </div>
     </header>
     <main>
-        <section class="about">
-                <h3 class="section-title">About Me</h3>
-                <p class="section-description">
-                    I, m a web developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our mata. 
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I am a web developer with a passion for web design. I enjoy developing
+          simple, clean and slick websites that provide real value to the end
+          user. Thousands of clients have procured exceptional results while
+          working with me. Delivering work within time and budget which meets
+          clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Noushad Xaman</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">noushadozi333@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of Birth</h4>
+            <p class="info-description">02 April 2004</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From</h4>
+            <p class="info-description">Dhaka, Bangladesh</p>
+          </div>
+        </div>
+      </section>
+      <section class="what-i-do">
+        <h3 class="section-title">What I do</h3>
+        <p class="section-description" id="do-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="./images/icons/js.png" alt="" />
+            <h3 class="skill-title">Vanilla JavaScript</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="./images/icons/react.png" alt="" />
+            <h3 class="skill-title">React</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="./images/icons/nodejs.png" alt="" />
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="./images/icons/mongo.png" alt="" />
+            <h3 class="skill-title">MongoDB</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h1 class="section-title main-resume-title">A summary of My Resume</h1>
+          <section class="resume-container">
+            <div class="resume-column">
+              <h3 class="resume-column-title">My Education</h3>
+              <div class="resume-item">
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">
+                  Harvard University / 2015 - 2017
+                </h3>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to any
+                  of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+                  ligula eget dolor.
                 </p>
-        </section>
+                <hr>
+              </div>
+              <div class="resume-item">
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">
+                  Harvard University / 2015 - 2017
+                </h3>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to any
+                  of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+                  ligula eget dolor.
+                </p>
+                <hr>
+              </div>
+              <div class="resume-item">
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">
+                  Harvard University / 2015 - 2017
+                </h3>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to any
+                  of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+                  ligula eget dolor.
+                </p>
+              </div>
+            </div>
+            <div class="resume-column">
+              <h3 class="resume-column-title">My Experience</h3>
+              <div class="resume-item">
+                <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                <h3 class="resume-item-institute">
+                    Apple Inc / 2020 - Current
+                </h3>
+                <p class="resume-item-description">
+                    List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+                <hr>
+              </div>
+              <div class="resume-item">
+                <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                <h3 class="resume-item-institute">
+                    Dribbble Inc / 2018 - 2022
+                </h3>
+                <p class="resume-item-description">
+                    List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+                <hr>
+              </div>
+              <div class="resume-item">
+                <h2 class="resume-item-title">HTML Developer</h2>
+                <h3 class="resume-item-institute">
+                    Adobe Inc / 2017 - 2018
+                </h3>
+                <p class="resume-item-description">
+                    List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+            </div>
+          </section>
+          <div class="btn-cv">
+            <button class="btn-primary">Download CV</button>
+          </div>
+      </section>
+      <footer>
+        
+      </footer>
     </main>
   </body>
 </html>
