--- a/index.html
+++ b/index.html
@@ -193,9 +193,31 @@
             <button class="btn-primary">Download CV</button>
           </div>
       </section>
-      <footer>
-        
-      </footer>
     </main>
+    <footer>
+      <div class="footer-column">
+          <h3 class="section-title">
+              Lets Connect
+          </h3>
+          <p class="section-decription">Please fill out the form on this section to contact with me or call between<br> 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div class="social-links">
+              <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+              <a href=""><img src="./images/icons/insta.png" alt=""></a>
+            <a href=""> <img src="./images/icons/twitter.png" alt=""></a>
+          </div>
+      </div>
+      <div class="footer-column">
+          <h3 class="section-title">
+              Let's Message me
+          </h3>
+          <form action="" class="contact">
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your Email">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+          </form>
+
+      </div>
+    </footer>
   </body>
 </html>
