--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button class="header-btn btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
           <button class="btn-secondary"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
-        <img class="profile-pic" src="./images/hardy.png" alt="" />
+        <img class="profile-pic" src="./images/Hand coding-amico.png" alt="" />
       </div>
     </header>
     <main>
