--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <form action="" class="contact">
           <input type="text" placeholder="Your name" />
           <input type="email" placeholder="Your Email" />
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <textarea name="" id="area" cols="30" rows="10"></textarea>
           <input class="btn-primary" type="submit" value="submit" />
         </form>
       </div>
