--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/2ae07c8a3e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Web Developer Portfolio</title>
+    <link rel="shortcut icon" href="./images/icons/icons8-portfolio-16.png" type="image/x-icon">
     <script
     src="https://kit.fontawesome.com/2ae07c8a3e.js"
     crossorigin="anonymous"
