--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="https://kit.fontawesome.com/2ae07c8a3e.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2ae07c8a3e.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Web Developer Portfolio</title>
-    <link rel="shortcut icon" href="./images/icons/icons8-portfolio-16.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./images/icons/icons8-portfolio-16.png"
+      type="image/x-icon"
+    />
     <script
-    src="https://kit.fontawesome.com/2ae07c8a3e.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/2ae07c8a3e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -32,8 +39,12 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="header-btn btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-          <button class="btn-secondary"><i class="fa-solid fa-phone"></i> Contact</button>
+          <button class="header-btn btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+          <button class="btn-secondary">
+            <i class="fa-solid fa-phone"></i> Contact
+          </button>
         </div>
         <img class="profile-pic" src="./images/Hand coding-amico.png" alt="" />
       </div>
