--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
             <h3 class="skill-title">Vanilla JavaScript</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
+              of the 1500+ FontAwesome 5 free icons available.
             </p>
           </div>
           <div class="skill">
@@ -101,8 +100,7 @@
             <h3 class="skill-title">React</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
+              of the 1500+ FontAwesome 5 free icons available.
             </p>
           </div>
           <div class="skill">
@@ -110,8 +108,7 @@
             <h3 class="skill-title">Node.js</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
+              of the 1500+ FontAwesome 5 free icons available.
             </p>
           </div>
           <div class="skill">
@@ -119,8 +116,7 @@
             <h3 class="skill-title">MongoDB</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
+              of the 1500+ FontAwesome 5 free icons available.
             </p>
           </div>
         </div>
@@ -137,8 +133,7 @@
               </h3>
               <p class="resume-item-description">
                 List skill/technologies here. You can change the icon above to
-                any of the 1500+ FontAwesome 5 free icons available. Aenean
-                commodo ligula eget dolor.
+                any of the 1500+ FontAwesome 5 free icons available.
               </p>
               <hr />
             </div>
@@ -149,8 +144,7 @@
               </h3>
               <p class="resume-item-description">
                 List skill/technologies here. You can change the icon above to
-                any of the 1500+ FontAwesome 5 free icons available. Aenean
-                commodo ligula eget dolor.
+                any of the 1500+ FontAwesome 5 free icons available.
               </p>
               <hr />
             </div>
@@ -161,8 +155,7 @@
               </h3>
               <p class="resume-item-description">
                 List skill/technologies here. You can change the icon above to
-                any of the 1500+ FontAwesome 5 free icons available. Aenean
-                commodo ligula eget dolor.
+                any of the 1500+ FontAwesome 5 free icons available.
               </p>
             </div>
           </div>
@@ -173,8 +166,7 @@
               <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
               <p class="resume-item-description">
                 List skill/technologies here. You can change the icon above to
-                any of the 1500+ FontAwesome 5 free icons available. Aenean
-                commodo ligula eget dolor.
+                any of the 1500+ FontAwesome 5 free icons available.
               </p>
               <hr />
             </div>
@@ -183,8 +175,7 @@
               <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
               <p class="resume-item-description">
                 List skill/technologies here. You can change the icon above to
-                any of the 1500+ FontAwesome 5 free icons available. Aenean
-                commodo ligula eget dolor.
+                any of the 1500+ FontAwesome 5 free icons available.
               </p>
               <hr />
             </div>
@@ -193,8 +184,7 @@
               <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
               <p class="resume-item-description">
                 List skill/technologies here. You can change the icon above to
-                any of the 1500+ FontAwesome 5 free icons available. Aenean
-                commodo ligula eget dolor.
+                any of the 1500+ FontAwesome 5 free icons available.
               </p>
             </div>
           </div>
