--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
         <div class="about-info-container">
           <div class="about-info">
             <h4 class="info-title">Name:</h4>
-            <p class="info-description">Noushad Xaman</p>
+            <p>Noushad Xaman</p>
           </div>
           <div class="about-info">
             <h4 class="info-title">Email:</h4>
-            <p class="info-description">noushadozi333@gmail.com</p>
+            <p>noushadozi333@gmail.com</p>
           </div>
           <div class="about-info">
             <h4 class="info-title">Date of Birth</h4>
-            <p class="info-description">02 April 2004</p>
+            <p>02 April 2004</p>
           </div>
           <div class="about-info">
             <h4 class="info-title">From</h4>
-            <p class="info-description">Dhaka, Bangladesh</p>
+            <p>Dhaka, Bangladesh</p>
           </div>
         </div>
       </section>
