--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section class="resume-container">
           <div class="resume-column">
             <h3 class="resume-column-title">My Education</h3>
-            <div class="resume-item">
+            <div>
               <h2 class="resume-item-title">Master in Computer Engineering</h2>
               <h3 class="resume-item-institute">
                 Harvard University / 2015 - 2017
@@ -137,7 +137,7 @@
               </p>
               <hr />
             </div>
-            <div class="resume-item">
+            <div>
               <h2 class="resume-item-title">Master in Computer Engineering</h2>
               <h3 class="resume-item-institute">
                 Harvard University / 2015 - 2017
@@ -148,7 +148,7 @@
               </p>
               <hr />
             </div>
-            <div class="resume-item">
+            <div>
               <h2 class="resume-item-title">Master in Computer Engineering</h2>
               <h3 class="resume-item-institute">
                 Harvard University / 2015 - 2017
@@ -161,7 +161,7 @@
           </div>
           <div class="resume-column">
             <h3 class="resume-column-title">My Experience</h3>
-            <div class="resume-item">
+            <div>
               <h2 class="resume-item-title">Sr. Font End Developer</h2>
               <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
               <p class="resume-item-description">
@@ -199,15 +199,15 @@
     <footer>
       <div class="footer-column">
         <h3 class="section-title">Lets Connect</h3>
-        <p class="section-decription">
+        <p>
           Please fill out the form on this section to contact with me or call
           between<br />
           9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div class="social-links">
-          <a href=""><img src="./images/icons/facebook.png" alt="" /></a>
-          <a href=""><img src="./images/icons/insta.png" alt="" /></a>
-          <a href=""> <img src="./images/icons/twitter.png" alt="" /></a>
+          <a><img src="./images/icons/facebook.png"/></a>
+          <a><img src="./images/icons/insta.png"/></a>
+          <a><img src="./images/icons/twitter.png"/></a>
         </div>
       </div>
       <div class="footer-column">
